<resources>
    <string name="app_name" translatable="false">GoalPulse</string>

    <!-- Errors -->
    <string name="http_400_errors">Incorrect request.</string>
    <string name="http_403_errors">"Oops! You don't have access to the requested resource. Please check your permissions."</string>
    <string name="http_429_errors">The request limit has been exceeded, try again in a minute.</string>
    <string name="http_500_errors">Server is not responding.</string>
    <string name="http_timeout_error">Response time out, please repeat later.</string>
    <string name="http_missing_error">Response missing connection, please repeat later.</string>
    <string name="http_network_error">Network error, please repeat later.</string>
    <string name="http_unknown_error">Something went wrong… %1$s</string>

    <!-- Position Type -->
    <string name="position_goalkeeper">Goalkeeper</string>
    <string name="position_defence">Defence</string>
    <string name="position_center_back">Centre-Back</string>
    <string name="position_left_back">Left-Back</string>
    <string name="position_right_back">Right-Back</string>
    <string name="position_defensive_midfield">Defensive Midfield</string>
    <string name="position_central_midfield">Central Midfield</string>
    <string name="position_attacking_midfield">Attacking Midfield</string>
    <string name="position_right_midfield">Right Midfield</string>
    <string name="position_left_midfield">Left Midfield</string>
    <string name="position_midfield">Midfield</string>
    <string name="position_left_winger">Left Winger</string>
    <string name="position_right_winger">Right Winger</string>
    <string name="position_offence">Offence</string>
    <string name="position_centre_forward">Centre-Forward</string>
    <string name="non">Non</string>

    <!-- Stage Type -->
    <string name="stage_league">League Stage</string>
    <string name="stage_final">Final</string>
    <string name="stage_third_place">Third Place</string>
    <string name="stage_semi_finals">Semi-finals</string>
    <string name="stage_quarter_finals">Quarter-finals</string>
    <string name="stage_last_16">Last 8</string>
    <string name="stage_last_32">Last 16</string>
    <string name="stage_last_64">Last 32</string>
    <string name="stage_round_4">Round 4</string>
    <string name="stage_round_3">Round 3</string>
    <string name="stage_round_2">Round 2</string>
    <string name="stage_round_1">Round 1</string>
    <string name="stage_group_stage">Group Stage</string>
    <string name="stage_preliminary_round">Preliminary Round</string>
    <string name="stage_qualification">Qualification</string>
    <string name="stage_qualification_round_1">Qualification Round 1</string>
    <string name="stage_qualification_round_2">Qualification Round 2</string>
    <string name="stage_qualification_round_3">Qualification Round 3</string>
    <string name="stage_playoff_round_1">Playoff Round 1</string>
    <string name="stage_playoff_round_2">Playoff Round 2</string>
    <string name="stage_playoffs">Playoffs</string>
    <string name="stage_regular_season">Regular Season</string>
    <string name="stage_clausura">Clausura</string>
    <string name="stage_apertura">Apertura</string>
    <string name="stage_championship">Championship</string>
    <string name="stage_relegation">Relegation</string>
    <string name="stage_relegation_round">Relegation Round</string>

    <!-- Match Statuses -->
    <string name="match_status_scheduled">Scheduled</string>
    <string name="match_status_live">Live</string>
    <string name="match_status_in_play">In Play</string>
    <string name="match_status_paused">Paused</string>
    <string name="match_status_finished">Finished</string>
    <string name="match_status_postponed">Postponed</string>
    <string name="match_status_suspended">Suspended</string>
    <string name="match_status_cancelled">Cancelled</string>

    <!-- Tournament Type -->
    <string name="tournament_type_league">League</string>
    <string name="tournament_type_league_cup">League Cup</string>
    <string name="tournament_type_cup">Cup</string>
    <string name="tournament_type_playoffs">Playoffs</string>

    <!-- Groups Type -->
    <string name="group_a">Group A</string>
    <string name="group_b">Group B</string>
    <string name="group_c">Group C</string>
    <string name="group_d">Group D</string>
    <string name="group_e">Group E</string>
    <string name="group_f">Group F</string>
    <string name="group_g">Group G</string>
    <string name="group_h">Group H</string>
    <string name="group_i">Group I</string>
    <string name="group_j">Group J</string>
    <string name="group_k">Group K</string>
    <string name="group_l">Group L</string>

    <!-- Result Type -->
    <string name="winner_home_team">Home Team</string>
    <string name="winner_away_team">Away Team</string>
    <string name="winner_draw">Draw</string>

    <!-- Competitions Screen -->
    <string name="available_competitions">Available competitions</string>
    <string name="available_competitions_count">%1$d available competitions</string>
    <string name="search_competitions">Search competitions</string>
    <string name="clear_search">Clear search</string>
    <string name="competitions_not_found">No competitions found</string>
    <string name="goal_pulse">Goal pulse!</string>
    <string name="current_match_day">Current match day</string>
    <string name="label_start_date">Start date</string>
    <string name="label_end_date">End date</string>

    <!-- Standings Screen -->
    <string name="tab_standings">Standings</string>
    <string name="tab_scorers">Scorers</string>
    <string name="tab_matches">Matches</string>
    <string name="header_team">Team</string>
    <string name="table_column_position">№</string>
    <string name="table_column_team">Team</string>
    <string name="table_column_matches">M</string>
    <string name="table_column_wins">W</string>
    <string name="table_column_draws">D</string>
    <string name="table_column_losses">L</string>
    <string name="table_column_goals_for">GF</string>
    <string name="table_column_goals_against">GA</string>
    <string name="table_column_points">P</string>
    <string name="table_description_matches"> - matches,</string>
    <string name="table_description_wins"> - wins,</string>
    <string name="table_description_draws"> - draws,</string>
    <string name="table_description_losses"> - loses,</string>
    <string name="table_description_goals_for"> - goals for,</string>
    <string name="table_description_goals_against"> - goals against,</string>
    <string name="table_description_points"> - points.</string>
    <string name="table_description_position"> - position</string>
    <string name="table_description_team"> - team</string>
    <string name="top_players_column_position">№</string>
    <string name="top_players_column_name">Name</string>
    <string name="top_players_column_matches">M</string>
    <string name="top_players_column_goals">G</string>
    <string name="top_players_column_assists">A</string>
    <string name="top_players_column_penalties">P</string>
    <string name="top_players_description_position"> - position</string>
    <string name="top_players_description_name"> - name</string>
    <string name="top_players_description_matches"> - matches,</string>
    <string name="top_players_description_goals"> - goals,</string>
    <string name="top_players_description_assists"> - assists,</string>
    <string name="top_players_description_penalties"> - penalties.</string>
    <string name="tab_matches_completed">Completed</string>
    <string name="tab_matches_ahead">Ahead</string>
    <string name="tour">tour</string>
    <string name="first_match_no_statistics">There are no statistics, this is the first match.</string>
    <string name="calendar_add_event">Add match to calendar</string>
    <string name="calendar_remove_event">Remove match from calendar</string>
    <string name="calendar_event_failed">Could not update the calendar event. Please try again.</string>
    <string name="stat_home_wins_hyphen">Home wins -</string>
    <string name="stat_draws_hyphen">Draws -</string>
    <string name="stat_away_wins_hyphen">Away wins -</string>

    <!-- TeamInfo Screen -->
    <string name="team_tab_squad">Squad</string>
    <string name="team_tab_info">Information</string>
    <string name="team_tab_matches">Matches</string>
    <string name="team_manager">Manager</string>
    <string name="player_name">Name</string>
    <string name="player_nationality">Nationality</string>
    <string name="player_age">Age</string>
    <string name="team_info_area">Area</string>
    <string name="team_info_address">Address</string>
    <string name="team_info_founded">Founded</string>
    <string name="team_info_venue">Venue</string>
    <string name="team_news">Team news</string>

    <!-- Person Screen -->
    <string name="player_number">Number</string>
    <string name="player_position">Position</string>

    <!-- Common -->
    <string name="reload">Reload</string>
    <string name="back">Back</string>
</resources>